assert-struct/tests/snapshots/field_operations__slice_with_deref_mismatch.snap
---
source: assert-struct/tests/field_operations.rs
expression: message
---
error: assert_struct! failed
  --> assert-struct/tests/field_operations_errors/slice_with_deref_mismatch.rs:16:28
   |
16 |         *boxed_vec: [1, 2, 4],  // Should be [1, 2, 3], will fail
   |                            ^ got 3
